chore: cleanup codebase - remove debug files, add README, update gitignore
- Add comprehensive project README.md with architecture and quickstart
- Update .gitignore with patterns for HANDOFF files and transient docs
- Remove HANDOFF files from git tracking (keep locally)
- Delete debug JS files from frontend and backend
- Delete transient verification/implementation docs

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ go.work
 
 # Debug files
 aci-backend/__debug_bin*
+debug-*.js
+aci-backend/test-*.js
 
 # Air live reload
 aci-backend/tmp/
@@ -129,3 +131,17 @@ data/
 *.tmp
 *.temp
 .env.backup
+
+# ===================
+# Transient Documentation
+# ===================
+*_VERIFICATION*.md
+*_IMPLEMENTATION*.md
+*_SUMMARY.md
+*VERIFICATION*.md
+*IMPLEMENTATION*.md
+
+# ===================
+# Development Artifacts
+# ===================
+**/HANDOFF*.md
